# TinySockets

./: .gitignore  CMakeLists.txt  Client.cpp  Message.h  MessageNum.h  README.md  Server.cpp  SocketClient.cpp  SocketClient.h  SocketException.h  SocketLib.sln  SocketLib.vcxproj  SocketLib.vcxproj.filters  SocketLib1.vcxproj  SocketLib1.vcxproj.filters  SocketMessenger.cpp  SocketMessenger.h  SocketServer.cpp  SocketServer.h  Tests.h  main.cpp
Communicators/: Client.h  Server.h  TCPClient.h  TCPServer.h  UDPClient.h  UDPServer.h
Connections/: Connection.cpp  Connection.h  Socket.h
Messages/: Message.h  MessageNum.h
Messengers/: SocketClient.cpp  SocketClient.h  SocketMessenger.cpp  SocketMessenger.h  SocketServer.cpp  SocketServer.h
Other/: SocketException.h  Utils.cpp  Utils.h
Tests/: Client.cpp  Main.cpp  MyConnection.h  Server.cpp  Tests.cpp  Tests.h
